@@ -5,6 +5,7 @@ Phoronix Test Suite (Git)
 pts-core: Ubuntu 21.04 dependency updates for changed/removed package names
 pts-core: Add "auto-resolution-wide" option
 pts-core: Add $CPU_THREADS_PER_CORE helper
+pts-core: Allow perf-per-dollar-per-hour in the result viewer, extending perf-per-dollar HTML helper
 phodevi: Intel Linux graphics string reporting improvement
 system_monitor: Adjust perf-per precision
 
